--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
     "node-input-validator": "^4.2.1",
-    "pick-some": "^1.0.2"
+    "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
